--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">ミニドラプロジェクト</a>
+          <a class="js-scroll-trigger" href="#page-top">WBA若手の会 研究開発部</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">ホーム</a>
@@ -44,7 +44,7 @@
           <a class="js-scroll-trigger" href="#portfolio">これまでの取り組み</a></a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#hardware">ハードウェア仕様</a>
+          <a class="js-scroll-trigger" href="#appearance">ハードウェア仕様</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#callout">お問い合わせ</a>
@@ -55,8 +55,8 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h1 class="mb-1">ミニドラプロジェクト</h1>
-        <h3 class="mb-5">WBA Future Leaders Research</h3>
+        <h1 class="mb-1">みんなで作る<br>コミュニケーションロボット</h1>
+        <h3 class="mb-5">全脳アーキテクチャ若手の会 研究開発部</h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">RADME MORE</a>
       </div>
       <div class="overlay"></div>
@@ -67,21 +67,21 @@
       <div class="container">
         <div class="content-section-heading">
           <h2 class="mb-5">あらまし</h2>
-          <p class="mb-3">
-            アニメ「ドラえもん」における、のび太とドラえもんの関係のように人とパートナーとして関わり合える知能は、どうすれば作り出せるのでしょうか。
+          <p class="lead mb-3">
+            ドラえもんのように人と関われるロボットは、どうすれば作り出せるのでしょうか。
+            のび太とドラえもんのように、人とロボットは親友になることができるのでしょうか。
           </p>
-          <p class="mb-3">
-            私たち全脳アーキテクチャ若手の会では「ミニドラプロジェクト」と称して、
-            ドラえもんのように愛されるロボットを実現し、それを活用していろんな人に幸せになってもらえるよう取り組んでいます。
-            「ミニドラプロジェクト」では、私たちがパートナー候補として感じられるシンプルなロボット「ミニドラ」を開発しています。
-            ロボットをパートナーとして私たちが認めるためには、ロボットとの円滑なコミュニケーションが重要です。
-            「ミニドラ」は私たち人間と全く同じことはできません。
-            例えば、人間の使う言葉を話せなければ、体が小さく段差を登ることもできません。
-            そのため、「ミニドラ」は私たちの助けを普段から必要としています。
+          <p class="lead mb-3">
+            私たち全脳アーキテクチャ若手の会では、ドラえもんのように、まるで人のように扱ってもらえるロボットの実現を目指しています。
+            しかし、現在の技術ではドラえもんのように言葉を流暢に話し、人と同じ生活空間で不自由なく動けるロボットを作るのは困難です。
+            そこで私たちは、言葉を話せなくても、体が不自由でも、人扱いしてもらえるロボットの研究開発に取り組んでいます。
+            このロボットの設定は、アニメドラえもんに出てくる小さなドラえもん「ミニドラ」にそっくりです。
           </p>
-          <p class="mb-3">
-            「ミニドラプロジェクト」では、「ミニドラ」と私たちの間にある身体的ギャップをどのようにしてコミュニケーションによって埋めるのか、
-            「ミニドラ」と人間の両方の立場からアプローチしています。
+          <p class="lead mb-3">
+            ミニドラはドラえもんを作る第一歩です。
+            言葉を話せない彼とどうすればコミュニケーションを取れるのか。
+            彼と私たちの間にある身体的ギャップをどうすれば埋められるのか。
+            私たちはロボット研究と人間研究の両方の立場から、これらの課題に挑戦しています。
           </p>
           <p class="lead mb-5"><!-- Just for padding --></p>
           <div class="embed-responsive embed-responsive-16by9">
@@ -90,7 +90,7 @@
           <p class="lead mb-5"><!-- Just for padding --></p>
         </div>
         <div class="text-center">
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">研究プロジェクト</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">これまでの取り組み</a>
         </div>
       </div>
     </section>
@@ -99,8 +99,7 @@
     <section class="content-section my-auto bg-light" id="portfolio">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">これまでの取り組み</h3>
-          <h2 class="mb-5">研究プロジェクト</h2>
+          <h2 class="mb-5">これまでの取り組み</h2>
           <p class="lead mb-5"><!-- Just for padding --></p>
         </div>
         <div class="row no-gutters">
@@ -108,8 +107,8 @@
             <a class="portfolio-item js-scroll-trigger" href="#harware-design">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>ハードウェアデザイン</h2>
-                  <p class="mb-0">人のように接してもらえる最もシンプルなロボットを作る上で、必要となる機能や見た目について研究しています。</p>
+                  <h2>良いインタラクションを引き出すデザイン</h2>
+                  <p class="mb-0">人のように接してもらえる最もシンプルなロボットを実現する上で、ロボットの見た目がどうあるべきか研究しています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -120,72 +119,77 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>非言語コミュニケーション</h2>
-                  <p class="mb-0">人は言葉を話せないロボットと会話できるのでしょうか？私たちは「人の未来を予測する力」と「ノンバーバル表現」に成功の鍵があると考えています。</p>
+                  <p class="mb-0">言葉を話せないロボットと会話なんてできるのでしょうか？私たちは「人の未来を予測する力」と「ノンバーバル表現」に成功の鍵があると考えています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item js-scroll-trigger" href="#impression">
+            <a class="portfolio-item js-scroll-trigger" href="#social-implementation">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>印象調査</h2>
-                  <p class="mb-0">ロボットを実際に人に使ってもらい、どのような印象を受けるか調べています。</p>
+                  <h2>ロボットが変える社会</h2>
+                  <p class="mb-0">人と会話できるロボットが社会に与える影響について、ITサービスを手がける企業の研究者とエンジニアと共に議論しました。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item js-scroll-trigger">
+            <a class="portfolio-item js-scroll-trigger" href="#fantasization">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>その他</h2>
-                  <p class="mb-0">新たな研究テーマについて定期的に議論しています。現在も複数のプロジェクトが進行中です。</p>
+                  <h2>ロボットと暮らす未来</h2>
+                  <p class="mb-0">ロボットが完成した時、彼は私たちにとってどのような存在になるのでしょうか？一人の女性が、その未来を妄想しました。</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-coming-soon.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
             </a>
           </div>
         </div>
       </div>
       <div class="container text-center">
         <h3 class="mb-5"><!-- Just for padding --></h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#publication">研究発表など</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#publication">これまでの実績</a>
       </div>
     </section>
 
-    <!-- Hardware Design -->
+    <!-- Appearance Design -->
     <section class="content-section bg-primary text-white" id="harware-design">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2 class="mb-5">ハードウェアデザイン</h2>
+            <h2 class="mb-5">良いインタラクションを引き出すデザイン</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-7 mx-auto mb-5">
-            <img src="img/hardware.jpg" class="img-responsive center-block"/>
+            <img src="img/appearance.jpg" class="img-responsive center-block"/>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <p class="mb-3">
-              人扱いされる最もシンプルなロボットを設計する上で、重要なことは二つあると考えています。
+              人扱いしてもらえる最もシンプルなロボットをデザインする上で、私たちは二つのことに注意しています。
             </p>
             <p class="mb-3">
-              一つ目は、つい助けたくなるデザインにすることです。
-              例えば、大人のような見た目のロボットであれば、大人レベルの知性と能力が期待され、大人と接するように扱われます。
+              一つ目は、できることとできないことが正しく伝わるようにデザインすることです。
+              例えば、大人の見た目をしたロボットであれば、大人レベルの知性と能力が期待され、大人と接するように扱われます。
+              できると思ったことができないとユーザはがっかりし、場合によっては二度とロボットと関わってくれなくなります。
+              こうした期待と実際のズレは「適応ギャップ」と呼ばれています。
+              適応ギャップを軽減するために、
+              人や動物に見えるようなデザインを避け、どの部分が動くかを明示することを意識しています。
+            </p>
+            <p class="mb-3">
+              二つ目は、人がつい助けたくなるデザインにすることです。
               私たちのロボットは、私たちの世界を自力で生きていくだけの能力は持ち合わせていません。
-              したがって、能力が不十分なことが相手に伝わり、助けてもらえるようなロボットの見た目を研究しています。
+              <知能増幅の良い例を出したい>
+              <二頭身とか、のっぺらぼうの理由が繋がる？>
             </p>
             <p class="mb-3">
-              二つ目は、言葉を使わずに情報を発信するために、多彩なノンバーバル表現を可能にすることです。
-              これまで開発されてきたテーブルトップサイズのコミュニケーションロボットの多くは言葉によるコミュニケーションが基本で、
-              頭や腕の動きなどのノンバーバル表現の利用は限定的でした。
-              私たちのロボットは、頭と腕の動きに加え、移動も可能であり、
-              従来のコミュニケーションロボットと比べ多様な表現が可能です。
+              ロボットの見た目がユーザに与える印象は継続的に検証しており、
+              より良いデザインを目指して現在も改善を続けています。
             </p>
           </div>
         </div>
@@ -212,69 +216,61 @@
             </p>
             <p class="mb-3">
               私たちは相手が言葉を扱えなくてもコミュニケーションを取ることができ、時に言葉で話しかけます。
-              こうした言葉に依らないコミュニケーションを支える重要な要素として、
-              私たちは「人の未来を予測する力」と「ノンバーバル表現」に着目し、研究を進めています。
+              こうした言葉に依らないコミュニケーションを支える重要な要素として
+              「人の未来を予測する力」と「ノンバーバル表現」に着目し、研究しています。
             </p>
             <p class="mb-3">
               「人の未来を予測する力」とは、状況に基づいてこれから受け取る情報を予期する力です。
               例えば、帰宅した時には「おかえり」と声をかけられることを私たちは知っています。
               冒頭のペットとの会話では、そうした事前知識に基づく予測によってペットの振る舞いを「おかえり」と解釈していると考えられます。
-            </p>
-            <p class="mb-3">
               「ノンバーバル表現」とは、言葉を使わずに伝達できる情報であり、身振りや声色などが当てはまります。
               例えば、「何で遊びたい？」とペットに尋ね、ペットがボールのもとへ走っていけば、言葉のやりとりなしに意図を理解できます。
             </p>
             <p class="mb-3">
-              非言語コミュニケーションを実現する第一歩として、「しりとり」を題材に実験を行いました。
-              しりとりには、「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べ、相手の応答を予測しやすい性質があります。
+              非言語コミュニケーションの第一歩として、「しりとり」を題材に実験を行いました。
+              しりとりには「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べ、相手の応答を予測しやすい性質があります。
               「人の未来を予測する力」に頼ったコミュニケーションが可能か検証する上で、これは都合の良い性質です。
+              実験の結果、ロボットは正しく言葉を話せないにも関わらず、半分以上の実験協力者は上手くしりとりができたと感じ、
+              「人の未来を予測する力」を活用すれば、言葉を話せないロボットと言葉で会話できる可能性があることが分かりました[清丸+ 2017]。
             </p>
             <p class="mb-3">
-              はじめに、ロボットの声だけを使った実験を行いました。
-              実験協力者はロボットに言葉で話しかけ、ロボットはミニドラやピカチュウのように限られた音を駆使して返事をします。
-              実験の結果、ロボットは言葉を正しく発音できないにも関わらず、半分以上の実験協力者が上手くしりとりを行えたと感じていたことが分かりました。
-              今後、より詳細に検討する必要はありますが、
-              「人の未来を予測する力」を活用すれば言葉を話せないロボットと言葉で会話できる可能性があることが分かりました。
-            </p>
-            <p class="mb-3">
-              実験のやりとりを分析したところ、二つのことに気が付きました。
-              一つ目は、しりとりが成立したと感じた実験協力者は、
-              しりとりの返事と「はい」や「いいえ」などの相槌を正しく区別できる傾向にあり、ターンテイキングが円滑であったことです。
-              二つ目は、そうした実験協力者でさえ、しりとりの返事を必ずしも正しく理解できていなかったことです。
-            </p>
-            <p class="mb-3">
-              これらの気付きから、現在はノンバーバル表現の活用方法について研究しています。
-              例えば、相槌の発話に首を振る動作が伴えば、それが相槌であることを簡単に理解でき、円滑なターンテイキングの実現に近付けると考えられます。
-              また、何かを指差しながら発話すれば、その先にあるモノに関する内容を伝えようとしていることが分かり、誤った解釈を減らせる可能性があります。
-            </p>
-            <p class="mb-3">
-              これまでに実際に検討してきたノンバーバル表現の一つは「会話の間」です。
-              この研究では、「人の未来を予測する力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
-              HAIシンポジウム2017にて学生奨励賞を受賞しました。
+              現在は、ノンバーバル表現を効果的に活用する方法について研究しており、
+              「会話の間」に着目した研究では、「人の未来を予測する力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
+              HAIシンポジウム2017にて学生奨励賞を受賞しました[大藤+ 2017]。
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Hardware Design -->
-    <section class="content-section bg-primary text-white" id="impression">
+    <!-- Social Implementation -->
+    <section class="content-section bg-primary text-white" id="social-implementation">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2 class="mb-5">印象調査</h2>
-            <p class="mb-5">上妻さんの話</p>
-            <p class="mb-5">澤田さんの話</p>
+            <h2 class="mb-5">ロボットが変える社会</h2>
+            <p class="mb-5">関西異分野交流会のミニドラセッションのまとめ</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Hardware -->
-    <section class="content-section" id="hardware">
+    <!-- Fantasization -->
+    <section class="content-section bg-light" id="fantasization">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h2 class="mb-5">ロボットと暮らす未来</h2>
+            <p class="mb-5">関西異分野交流会のミニドラセッションのまとめ</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- appearance -->
+    <section class="content-section bg-primary text-white" id="appearance">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">ミニドラの仕組み</h3>
           <h2 class="mb-5">ハードウェア仕様</h2>
           <p class="lead mb-5"><!-- Just for padding --></p>
           <p class="mb-3">
@@ -285,7 +281,7 @@
     </section>
 
     <!-- Publications -->
-    <section class="content-section bg-primary text-white" id="publication">
+    <section class="content-section bg-light" id="publication">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -313,6 +309,11 @@
             <ul>
               <li>2017年 KTM Microsoft Imagine Cup AWARD</li>
               <li>2017年 HAIシンポジウム 学生奨励賞</li>
+            </ul>
+            <h2 class="mb-3">研究助成金</h2>
+            <ul>
+              <li>孫正義育英財団 5,000,000円</li>
+              <li>ZERO財団 1,000,000円</li>
             </ul>
           </div>
         </div>
