update link destination

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <p class="lead mb-5">
           プロジェクトへの参加およびご質問、ご意見、ご指摘などは下記のフォームよりお知らせください。
         </p>
-        <a class="btn btn-primary btn-xl" href="">CONTACT US</a>
+        <a class="btn btn-primary btn-xl" href="https://wbawakate.jp/contact/">CONTACT US</a>
       </div>
     </section>
 
@@ -342,18 +342,8 @@
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/groups/713921892010595/">
               <i class="icon-social-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
-              <i class="icon-social-github"></i>
             </a>
           </li>
         </ul>
