--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <ul>
               <li>奥岡耕平，大澤正彦，今井倫太, "コンテクスト推定に基づいて予測的認知を誘発する非自然言語エージェント", 情報処理学会第80回全国大会, 2018. (口頭)</li>
               <li>大藤聖菜, 妹尾卓磨, 清丸寛一, 川崎邦将, 大澤正彦, 長田茂美, 今井倫太, "予測的認知と「間」の関係―言葉を話せないロボットによるしりとりを題材とした考察―", HAIシンポジウム, 2017. (口頭)</li>
-              <li>上妻真緒, 大藤聖菜, 大澤正彦, 今井倫太, 山田祐樹, "コミュニケーション成立の個人差からみる非言語エージェントへの印象", HAIシンポジウム, 2017</li>
+              <li>上妻真緒, 大藤聖菜, 大澤正彦, 今井倫太, 山田祐樹, "コミュニケーション成立の個人差からみる非言語エージェントへの印象", HAIシンポジウム, 2017. (ポスター)</li>
               <li>大澤正彦, 川崎邦将, 八木拓真, 長田茂美, 今井倫太, "汎用人工知能研究のマイルストーンとしての擬人化キャラクター", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
               <li>川崎邦将, 大澤正彦, 今井倫太, 長田茂美, "認知的制約付き擬人化キャラクターに着目したコミュニケーションロボットの設計と開発", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
               <li>清丸寛一, 大澤正彦, 今井倫太, "予測的認知を用いた非自然言語による言語的コミュニケーション", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
