--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title></title>
+    <title>全員主役の学際融合型ロボット開発プロジェクト</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h1 class="mb-1">みんなで作る<br>コミュニケーションロボット</h1>
+        <h1 class="mb-1">全員が主役になれる<br>学際融合型ロボット開発プロジェクト</h1>
         <h3 class="mb-5">全脳アーキテクチャ若手の会 研究開発部</h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">RADME MORE</a>
       </div>
