add fantasization and hardware configuration

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a class="js-scroll-trigger" href="#portfolio">これまでの取り組み</a></a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#appearance">ハードウェア仕様</a>
+          <a class="js-scroll-trigger" href="#hardware">ハードウェア仕様</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#callout">お問い合わせ</a>
@@ -126,25 +126,25 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item js-scroll-trigger" href="#social-implementation">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>ロボットが変える社会</h2>
-                  <p class="mb-0">人と会話できるロボットが社会に与える影響について、ITサービスを手がける企業の研究者とエンジニアと共に議論しました。</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
             <a class="portfolio-item js-scroll-trigger" href="#fantasization">
               <span class="caption">
                 <span class="caption-content">
                   <h2>ロボットと暮らす未来</h2>
-                  <p class="mb-0">ロボットが完成した時、彼は私たちにとってどのような存在になるのでしょうか？一人の女性が、その未来を妄想しました。</p>
+                  <p class="mb-0">ロボットが完成した時、彼は私たちにとってどのような存在になるのでしょうか？利用者の視点で、人とロボットが共に暮らす未来について考えました。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item js-scroll-trigger" href="#social-implementation">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>ロボットが変える社会</h2>
+                  <p class="mb-0">人と会話できるロボットが社会に与える影響について、ITサービスを手がける企業の研究者・エンジニアと議論しました。</p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
             </a>
           </div>
         </div>
@@ -243,20 +243,45 @@
       </div>
     </section>
 
-    <!-- Social Implementation -->
-    <section class="content-section bg-primary text-white" id="social-implementation">
+    <!-- Fantasization -->
+    <section class="content-section bg-primary text-white" id="fantasization">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2 class="mb-5">ロボットが変える社会</h2>
-            <p class="mb-5">関西異分野交流会のミニドラセッションのまとめ</p>
+            <h2 class="mb-5">ロボットと暮らす未来</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-7 mx-auto mb-5">
+            <img src="img/fantasization.jpg" class="img-responsive center-block"/>
+            </div>
+          </div>
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <p class="mb-3">
+              本プロジェクトに参加するにあたり、必ずしも研究やプログラミングができる必要はありません。
+            </p>
+            <p class="mb-3">
+              技術の進歩に法整備が追い付いていなかったり、技術者とそうでない人との間でテクノロジーに対する理解度に格差があったりするという問題があります。これらの問題の解決には、技術者でない人たちの協力が不可欠です。
+            </p>
+            <p class="mb-3">
+              また、どのようなロボットが人に受け入れられるか、どうしたら円滑なコミュニケーションがとれるかといったアイデアを、利用者視点で膨らましていくことも必要です。
+　　　　　　　</p>
+            <p class="mb-3">
+              ロボットと河原でのんびり日向ぼっこしたり、お散歩したり。友達や恋人だったら「何か話さなきゃ」と気を遣ってしまうかもしれないけど、ロボットとならそんなこともない。
+              ちょうどいい心の距離感。誰かがそばにいてくれる安心感に包まれながら、のんびりまったり時間が流れてゆくのを楽しむことができる。
+              こんな風に、ロボットとの生活の情景を鮮明に描いてくれることも、まるで人のように扱ってもらえるロボットの在り方を考えるうえで重要です。
+            </p>
+            <p class="mb-3">
+              ロボットが人々の生活にとけこむ社会を実現するためには、技術のみならずあらゆる立場の視点や知識が不可欠です。全脳アーキテクチャ若手の会は、本プロジェクトに興味を持ったすべての人の参加を歓迎します。
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Fantasization -->
-    <section class="content-section bg-light" id="fantasization">
+    <!-- Social implementaiton -->
+    <!-- <section class="content-section bg-light" id="social-implementation">
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
@@ -265,29 +290,27 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- appearance -->
-    <section class="content-section bg-primary text-white" id="appearance">
+    <section class="content-section bg-light" id="hardware">
       <div class="container">
         <div class="content-section-heading">
           <h2 class="mb-5">ハードウェア仕様</h2>
           <p class="lead mb-5"><!-- Just for padding --></p>
-          <p class="mb-3">
-            ミニドラのレンダリングイメージに吹き出しで大きさ・重さなどの情報を書いた図を作る
-          </p>
+          <img src="img/hardware.png" class="img-responsive center-block"/>
         </div>
       </div>
     </section>
 
     <!-- Publications -->
-    <section class="content-section bg-light" id="publication">
+    <section class="content-section bg-primary text-white" id="publication">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2 class="mb-3">研究発表</h2>
             <ul>
-              <li>奥岡耕平，大澤正彦，今井倫太, "コンテクスト推定に基づいて予測的認知を誘発する非自然言語エージェント", 情報処理学会第80回全国大会, 2018. (口頭)</li>
+              <li>奥岡耕平、大澤正彦、今井倫太, "コンテクスト推定に基づいて予測的認知を誘発する非自然言語エージェント", 情報処理学会第80回全国大会, 2018. (口頭)</li>
               <li>大藤聖菜, 妹尾卓磨, 清丸寛一, 川崎邦将, 大澤正彦, 長田茂美, 今井倫太, "予測的認知と「間」の関係―言葉を話せないロボットによるしりとりを題材とした考察―", HAIシンポジウム, 2017. (口頭)</li>
               <li>上妻真緒, 大藤聖菜, 大澤正彦, 今井倫太, 山田祐樹, "コミュニケーション成立の個人差からみる非言語エージェントへの印象", HAIシンポジウム, 2017. (ポスター)</li>
               <li>大澤正彦, 川崎邦将, 八木拓真, 長田茂美, 今井倫太, "汎用人工知能研究のマイルストーンとしての擬人化キャラクター", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
