update appearance design

--- a/index.html
+++ b/index.html
@@ -182,14 +182,16 @@
               人や動物に見えるようなデザインを避け、どの部分が動くかを明示することを意識しています。
             </p>
             <p class="mb-3">
-              二つ目は、人がつい助けたくなるデザインにすることです。
-              私たちのロボットは、私たちの世界を自力で生きていくだけの能力は持ち合わせていません。
-              <知能増幅の良い例を出したい>
-              <二頭身とか、のっぺらぼうの理由が繋がる？>
+              二つ目は、人がつい助けたくなるようなデザインにすることです。
+              私たちのロボットは、何をするにしても人と関わり助けてもらう必要があり、そのためには人に好感を持ってもらうことが重要です。
+              人には、物事に複数の解釈がある時、自分にとって都合の良い解釈をする傾向があり、これは「楽観バイアス」と呼ばれています。
+              私たちのロボットはのっぺらぼうのような、どんな顔にも取れる見た目をしていますが、
+              こうすることで人が自分にとって都合の良い顔を無意識的に想像し、ロボットに好感を持ってくれることを期待しています。
+              また、小型の二頭身の身体にすることで持ち上げたり頭をなでたりしても良いことを人に伝え、
+              接触によるインタラクションを促すことでより好感を育むことができると考えています。
             </p>
             <p class="mb-3">
-              ロボットの見た目がユーザに与える印象は継続的に検証しており、
-              より良いデザインを目指して現在も改善を続けています。
+              ロボットの見た目がユーザに与える印象は継続的に検証しており、より良いデザインを目指して現在も改善を続けています。
             </p>
           </div>
         </div>
