--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="row">
           <div class="col-lg-7 mx-auto mb-5">
-            <img src="img/appearance.jpg" class="img-responsive center-block"/>
+            <img src="img/appearance.png" class="img-responsive center-block"/>
           </div>
         </div>
         <div class="row">
