--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </section> -->
 
     <!-- appearance -->
-    <section class="content-section bg-light" id="hardware">
+    <section class="content-section" id="hardware">
       <div class="container">
         <div class="content-section-heading">
           <h2 class="mb-5">ハードウェア仕様</h2>
