--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           私たちは本プロジェクトに一緒に取り組む仲間を探しています。
         </p>
         <p class="lead mb-5">
-          本プロジェクトには全脳アーキテクチャ若手の会に関わる多彩な専門を持った若手研究者だけでなく、<br>
+          本プロジェクトには全脳アーキテクチャ若手の会に関わる研究者・技術者だけでなく、<br>
           プロジェクトの趣旨に共感する非専門家も多く参加しています。
         </p>
         <p class="lead mb-5">
