--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1">全員が主役になれる<br>学際融合型ロボット開発プロジェクト</h1>
         <h3 class="mb-5">全脳アーキテクチャ若手の会 研究開発部</h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">RADME MORE</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">READ MORE</a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -130,18 +130,18 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>ロボットと暮らす未来</h2>
-                  <p class="mb-0">ロボットが完成した時、彼は私たちにとってどのような存在になるのでしょうか？利用者の視点で、人とロボットが共に暮らす未来について考えました。</p>
+                  <p class="mb-0">ロボットが完成した時、彼は私たちにとってどのような存在になるのでしょうか？技術者と利用者、双方の視点から人とロボットが共に暮らす未来について考えています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item js-scroll-trigger" href="#social-implementation">
+            <a class="portfolio-item js-scroll-trigger">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>ロボットが変える社会</h2>
-                  <p class="mb-0">人と会話できるロボットが社会に与える影響について、ITサービスを手がける企業の研究者・エンジニアと議論しました。</p>
+                  <h2>その他</h2>
+                  <p class="mb-0">オンラインでの議論や開発合宿を通じて、新たな研究テーマやプロジェクトの方針について定期的に議論しています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -178,20 +178,19 @@
               例えば、大人の見た目をしたロボットであれば、大人レベルの知性と能力が期待され、大人と接するように扱われます。
               できると思ったことができないとユーザはがっかりし、場合によっては二度とロボットと関わってくれなくなります。
               こうした期待と実際のズレは「適応ギャップ」と呼ばれています。
-              適応ギャップを軽減するために、
-              人や動物に見えるようなデザインを避け、どの部分が動くかを明示することを意識しています。
+              適応ギャップを軽減するために、人や動物に見えるようなデザインを避け、どの部分が動くかを明示することを意識しています。
             </p>
             <p class="mb-3">
               二つ目は、人がつい助けたくなるようなデザインにすることです。
-              私たちのロボットは、何をするにしても人と関わり助けてもらう必要があり、そのためには人に好感を持ってもらうことが重要です。
-              人には、物事に複数の解釈がある時、自分にとって都合の良い解釈をする傾向があり、これは「楽観バイアス」と呼ばれています。
-              私たちのロボットはのっぺらぼうのような、どんな顔にも取れる見た目をしていますが、
+              私たちのロボットは何をするにしても人と関わり助けてもらう必要があり、そのためには人に好感を持ってもらうことが重要です。
+              人には、物事に複数の解釈がある時に自分にとって都合の良い解釈をする傾向があり、これは「楽観バイアス」と呼ばれています。
+              私たちのロボットはのっぺらぼうのようなどんな顔にも取れる見た目をしていますが、
               こうすることで人が自分にとって都合の良い顔を無意識的に想像し、ロボットに好感を持ってくれることを期待しています。
               また、小型の二頭身の身体にすることで持ち上げたり頭をなでたりしても良いことを人に伝え、
               接触によるインタラクションを促すことでより好感を育むことができると考えています。
             </p>
             <p class="mb-3">
-              ロボットの見た目がユーザに与える印象は継続的に検証しており、より良いデザインを目指して現在も改善を続けています。
+              ロボットの見た目がユーザに与える印象は継続的に検証しており、より良いデザインを目指して現在も改善を続けています[川崎+ 2017]。
             </p>
           </div>
         </div>
@@ -275,24 +274,14 @@
               こんな風に、ロボットとの生活の情景を鮮明に描いてくれることも、まるで人のように扱ってもらえるロボットの在り方を考えるうえで重要です。
             </p>
             <p class="mb-3">
-              ロボットが人々の生活にとけこむ社会を実現するためには、技術のみならずあらゆる立場の視点や知識が不可欠です。全脳アーキテクチャ若手の会は、本プロジェクトに興味を持ったすべての人の参加を歓迎します。
+              ロボットが人々の生活にとけこむ社会を実現するためには、技術のみならずあらゆる立場の視点や知識が不可欠です。
+              時にはワークショップを開催し、企業のエンジニアと社会での具体的な活用について議論したり、一般の方からの率直な意見を頂いたりしています。
+              全脳アーキテクチャ若手の会は、本プロジェクトに興味を持ったすべての人の参加を歓迎します。
             </p>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Social implementaiton -->
-    <!-- <section class="content-section bg-light" id="social-implementation">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h2 class="mb-5">ロボットと暮らす未来</h2>
-            <p class="mb-5">関西異分野交流会のミニドラセッションのまとめ</p>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- appearance -->
     <section class="content-section" id="hardware">
