--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>非言語コミュニケーション</h2>
-                  <p class="mb-0">言葉を話せないロボットと会話なんてできるのでしょうか？私たちは「人の未来を予測する力」と「ノンバーバル表現」に成功の鍵があると考えています。</p>
+                  <p class="mb-0">言葉を話せないロボットと会話なんてできるのでしょうか？私たちは「未来を予測する人の能力」と「ノンバーバル表現」に成功の鍵があると考えています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -183,7 +183,7 @@
             <p class="mb-3">
               二つ目は、人がつい助けたくなるようなデザインにすることです。
               私たちのロボットは何をするにしても人と関わり助けてもらう必要があり、そのためには人に好感を持ってもらうことが重要です。
-              人には、物事に複数の解釈がある時に自分にとって都合の良い解釈をする傾向があり、これは「楽観バイアス」と呼ばれています。
+              人には、物事に複数の解釈がある時に自分にとって都合の良い解釈をする認知バイアスがあります。
               私たちのロボットはのっぺらぼうのようなどんな顔にも取れる見た目をしていますが、
               こうすることで人が自分にとって都合の良い顔を無意識的に想像し、ロボットに好感を持ってくれることを期待しています。
               また、小型の二頭身の身体にすることで持ち上げたり頭をなでたりしても良いことを人に伝え、
@@ -218,10 +218,10 @@
             <p class="mb-3">
               私たちは相手が言葉を扱えなくてもコミュニケーションを取ることができ、時に言葉で話しかけます。
               こうした言葉に依らないコミュニケーションを支える重要な要素として
-              「人の未来を予測する力」と「ノンバーバル表現」に着目し、研究しています。
+              「未来を予測する人の能力」と「ノンバーバル表現」に着目し、研究しています。
             </p>
             <p class="mb-3">
-              「人の未来を予測する力」とは、状況に基づいてこれから受け取る情報を予期する力です。
+              「未来を予測する人の能力」とは、状況に基づいてこれから受け取る情報を予期する力です。
               例えば、帰宅した時には「おかえり」と声をかけられることを私たちは知っています。
               冒頭のペットとの会話では、そうした事前知識に基づく予測によってペットの振る舞いを「おかえり」と解釈していると考えられます。
               「ノンバーバル表現」とは、言葉を使わずに伝達できる情報であり、身振りや声色などが当てはまります。
@@ -230,13 +230,13 @@
             <p class="mb-3">
               非言語コミュニケーションの第一歩として、「しりとり」を題材に実験を行いました。
               しりとりには「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べ、相手の応答を予測しやすい性質があります。
-              「人の未来を予測する力」に頼ったコミュニケーションが可能か検証する上で、これは都合の良い性質です。
+              「未来を予測する人の能力」に頼ったコミュニケーションが可能か検証する上で、これは都合の良い性質です。
               実験の結果、ロボットは正しく言葉を話せないにも関わらず、半分以上の実験協力者は上手くしりとりができたと感じ、
-              「人の未来を予測する力」を活用すれば、言葉を話せないロボットと言葉で会話できる可能性があることが分かりました[清丸+ 2017]。
+              「未来を予測する人の能力」を活用すれば、言葉を話せないロボットと言葉で会話できる可能性があることが分かりました[清丸+ 2017]。
             </p>
             <p class="mb-3">
               現在は、ノンバーバル表現を効果的に活用する方法について研究しており、
-              「会話の間」に着目した研究では、「人の未来を予測する力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
+              「会話の間」に着目した研究では、「未来を予測する人の能力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
               HAIシンポジウム2017にて学生奨励賞を受賞しました[大藤+ 2017]。
             </p>
           </div>
