--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="content-section-heading">
           <h2 class="mb-5">あらまし</h2>
           <p class="lead mb-3">
-            ドラえもんのように人と関われるロボットは、どうすれば作り出せるのでしょうか。
+            ドラえもんのように人と関わることができるロボットは、どうすれば作り出せるのでしょうか。
             のび太とドラえもんのように、人とロボットは親友になることができるのでしょうか。
           </p>
           <p class="lead mb-3">
@@ -183,7 +183,7 @@
             <p class="mb-3">
               二つ目は、人がつい助けたくなるようなデザインにすることです。
               私たちのロボットは何をするにしても人と関わり助けてもらう必要があり、そのためには人に好感を持ってもらうことが重要です。
-              人には、物事に複数の解釈がある時に自分にとって都合の良い解釈をする認知バイアスがあります。
+              人は物事に複数の解釈があり得る際に、自分にとって都合の良い解釈を選びやすい傾向にあります。
               私たちのロボットはのっぺらぼうのようなどんな顔にも取れる見た目をしていますが、
               こうすることで人が自分にとって都合の良い顔を無意識的に想像し、ロボットに好感を持ってくれることを期待しています。
               また、小型の二頭身の身体にすることで持ち上げたり頭をなでたりしても良いことを人に伝え、
@@ -217,26 +217,25 @@
             </p>
             <p class="mb-3">
               私たちは相手が言葉を扱えなくてもコミュニケーションを取ることができ、時に言葉で話しかけます。
-              こうした言葉に依らないコミュニケーションを支える重要な要素として
-              「未来を予測する人の能力」と「ノンバーバル表現」に着目し、研究しています。
+              こうした言葉に依らないコミュニケーションを支える重要な要素として「未来を予測する人の能力」と「ノンバーバル表現」に着目し、研究しています。
             </p>
             <p class="mb-3">
               「未来を予測する人の能力」とは、状況に基づいてこれから受け取る情報を予期する力です。
               例えば、帰宅した時には「おかえり」と声をかけられることを私たちは知っています。
               冒頭のペットとの会話では、そうした事前知識に基づく予測によってペットの振る舞いを「おかえり」と解釈していると考えられます。
-              「ノンバーバル表現」とは、言葉を使わずに伝達できる情報であり、身振りや声色などが当てはまります。
+              「ノンバーバル表現」とは、言葉を使わずに伝達できる情報であり身振りや声色などが当てはまります。
               例えば、「何で遊びたい？」とペットに尋ね、ペットがボールのもとへ走っていけば、言葉のやりとりなしに意図を理解できます。
             </p>
             <p class="mb-3">
-              非言語コミュニケーションの第一歩として、「しりとり」を題材に実験を行いました。
-              しりとりには「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べ、相手の応答を予測しやすい性質があります。
-              「未来を予測する人の能力」に頼ったコミュニケーションが可能か検証する上で、これは都合の良い性質です。
-              実験の結果、ロボットは正しく言葉を話せないにも関わらず、半分以上の実験協力者は上手くしりとりができたと感じ、
-              「未来を予測する人の能力」を活用すれば、言葉を話せないロボットと言葉で会話できる可能性があることが分かりました[清丸+ 2017]。
+              非言語コミュニケーションの第一歩として「しりとり」を題材に実験を行いました。
+              しりとりには「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べて相手の応答を予測しやすい性質があります。
+              「未来を予測する人の能力」に頼ったコミュニケーションが可能か検証する上でこれは都合の良い性質です。
+              実験の結果、ロボットは正しく言葉を話せないにも関わらず半分以上の実験協力者は上手くしりとりができたと感じ、
+              「未来を予測する人の能力」を活用すれば言葉を話せないロボットと言葉で会話できる可能性があることが分かりました[清丸+ 2017]。
             </p>
             <p class="mb-3">
-              現在は、ノンバーバル表現を効果的に活用する方法について研究しており、
-              「会話の間」に着目した研究では、「未来を予測する人の能力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
+              現在は、ノンバーバル表現を効果的に活用する方法について研究を進めています。
+              「会話の間」に着目した研究では「未来を予測する人の能力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
               HAIシンポジウム2017にて学生奨励賞を受賞しました[大藤+ 2017]。
             </p>
           </div>
@@ -263,15 +262,16 @@
               本プロジェクトに参加するにあたり、必ずしも研究やプログラミングができる必要はありません。
             </p>
             <p class="mb-3">
-              技術の進歩に法整備が追い付いていなかったり、技術者とそうでない人との間でテクノロジーに対する理解度に格差があったりするという問題があります。これらの問題の解決には、技術者でない人たちの協力が不可欠です。
+              技術の進歩に法整備が追い付いていなかったり、技術者とそうでない人との間でテクノロジーに対する理解度に格差があったりするという問題があります。
+              これらの問題の解決には、技術者でない人たちの協力が不可欠です。
             </p>
             <p class="mb-3">
-              また、どのようなロボットが人に受け入れられるか、どうしたら円滑なコミュニケーションがとれるかといったアイデアを、利用者視点で膨らましていくことも必要です。
+              また、どのようなロボットが人に受け入れられるか、どうしたら円滑なコミュニケーションがとれるかといったアイデアを、利用者の視点で膨らましていくことも必要です。
 　　　　　　　</p>
             <p class="mb-3">
               ロボットと河原でのんびり日向ぼっこしたり、お散歩したり。友達や恋人だったら「何か話さなきゃ」と気を遣ってしまうかもしれないけど、ロボットとならそんなこともない。
               ちょうどいい心の距離感。誰かがそばにいてくれる安心感に包まれながら、のんびりまったり時間が流れてゆくのを楽しむことができる。
-              こんな風に、ロボットとの生活の情景を鮮明に描いてくれることも、まるで人のように扱ってもらえるロボットの在り方を考えるうえで重要です。
+              このようにロボットとの生活の情景を鮮明に描くことも、まるで人のように扱ってもらえるロボットの在り方を考える上で重要です。
             </p>
             <p class="mb-3">
               ロボットが人々の生活にとけこむ社会を実現するためには、技術のみならずあらゆる立場の視点や知識が不可欠です。
